# omlmd

./: .gitignore  404.html  CONTRIBUTING.md  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: dependabot.yml  labeler.yml
.github/workflows/: build.yaml  docs.yaml  e2e.yaml  labeler.yml  release.yaml
appendixes/appendix-links/: index.html
demos/: Containerfile.bootc  Containerfile.modelcar  demo-mrintegration.ipynb  demo-pipeline.ipynb
demos/demo/: index.html
demos/demo2/: index.html
demos/demo3/: index.html
docs/: glossary.md  index.md  overview.md  use-cases.md
docs/appendixes/: appendix-links.md  gen-appendix-links.py
docs/demos/: demo.ipynb  demo.md  demo2.md  demo3.md
e2e/: deploy_distribution_registry.sh  deploy_model_registry.sh  deploy_quay_lite.sh  deploy_zot.sh  test_cli.sh
e2e/distribution-registry/: distribution-registry.yaml
e2e/model-registry/: README.md  docker-compose.yaml
e2e/quay-lite/: README.md  config.yaml  quay-all-in-one.yaml  quay-app-config.yaml
e2e/zot/: custom-values.yaml
glossary/: index.html
omlmd/: cli.py  constants.py  helpers.py  listener.py  model_metadata.py  provider.py
overview/: index.html
search/: search_index.json
stylesheets/: extra.css
tests/: conftest.py  test_e2e_model_registry.py  test_helpers.py  test_omlmd.py
tests/data/: md.json
use-cases/: index.html
